--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
   "content_scripts": [
     {
       "js": ["jquery-1.10.2.min.js", "content_script.js"],
+      "css": ["styles.css"],
       "run_at": "document_idle",
       "all_frames": true,
       "matches": ["<all_urls>"]
