options.html, create

--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,11 @@
   "manifest_version": 2,
   "name": "萌典 moedict",
   "description": "輕鬆查找中文字意。 View Chinese definitions easily when browsing.",
-  "version": "1.0",
+  "version": "1.0.1",
   "permissions": [
     "http://moedict.org/"
   ],
+  "options_page": "options.html",
   "content_scripts": [
     {
       "js": ["jquery-1.10.2.min.js", "content_script.js"],
