--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,9 @@
   "name": "萌典 moedict",
   "description": "輕鬆查找中文字意。 View Chinese definitions easily when browsing.",
   "version": "1.0.1",
-  "permissions": [
-    "http://moedict.org/"
-  ],
   "content_scripts": [
     {
-      "js": ["jquery-1.10.2.min.js", "content_script.js"],
+      "js": ["jquery-1.10.2.min.js", "simp-trad.js", "content_script.js"],
       "css": ["styles.css"],
       "run_at": "document_idle",
       "all_frames": true,
