--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,6 @@
   ],
   "icons": { "16": "images/icon16.png",
              "48": "images/icon48.png",
-            "128": "images/icon128.png" }
+            "128": "images/icon128.png" },
+  "permissions": ["storage"]
 }
